# SimuCGen

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/cli/: main.cpp
src/codegen/: CodeGenerator.cpp  CodeGenerator.h
src/graph/: BlockGraph.cpp  BlockGraph.h
src/model/: Model.h
src/parser/: XmlParser.cpp  XmlParser.h
src/scheduler/: Scheduler.cpp  Scheduler.h
tests/: CMakeLists.txt  TestBlockGraph.cpp  TestCodeGenerator.cpp  TestIntegration.cpp  TestScheduler.cpp  TestXmlParser.cpp  run_integration.bat  run_integration.sh
tests/fixtures/: algebraic_loop.xml  branch_test.xml  branch_test2.xml  branch_test2_output.c  complex_chain.xml  complex_chain_output.c  nwocg_user.xml  nwocg_user_output.c  pi_controller.xml  pi_controller_expected.c  pi_controller_with_delay.xml  pi_controller_with_delay_output.c
tests/include/: nwocg_run.h
